<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.test.weatherapp.ui.main.view.MainActivity">

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="100"
        android:title="Search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_view_favourites"
        android:orderInCategory="100"
        android:title="@string/view_favourites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map_favourites"
        android:orderInCategory="100"
        android:title="@string/view_favourites_on_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_more_about_location"
        android:orderInCategory="100"
        android:title="@string/show_extra_info"
        app:showAsAction="never" />
</menu>