<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/checkout_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_weather_image"
                        android:layout_width="fill_parent"
                        android:layout_height="300dp"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        />

                    <com.google.android.material.appbar.AppBarLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/toolbar_bg"
                        android:layout_height="wrap_content"
                        app:elevation="0dp">

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:contentInsetStartWithNavigation="0dp"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                            app:theme="@style/Toolbar.Light">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="?attr/actionBarSize"
                                android:layout_marginEnd="@dimen/fifteen"
                                android:layout_marginRight="@dimen/fifteen"
                                android:gravity="center"
                                android:orientation="horizontal">


                            </LinearLayout>

                        </androidx.appcompat.widget.Toolbar>

                    </com.google.android.material.appbar.AppBarLayout>

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_xlarge" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lyt_values"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/spacing_xxlarge"
                            android:layout_weight="0.95"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="20"
                                android:id="@+id/tv_min"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/spacing_xxlarge"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/min"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/spacing_xxlarge" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_current"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="6"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/spacing_xxlarge"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_small"
                                android:text="@string/current"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/spacing_xxlarge" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_max"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/spacing_xxxlarge"
                                tools:text="27"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/spacing_xxxlarge"
                                android:layout_marginTop="@dimen/spacing_small"
                                android:gravity="center_horizontal"
                                android:text="@string/max"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/spacing_xxlarge" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/spacing_xlarge"
                        android:background="@android:color/white" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_weather_forecast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />


                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>